# blocl-bnglatlon

./: .gitignore  LICENSE  README.md  README.rst  bng_to_latlon.py  latlon_to_bng.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
bng_latlon/: __init__.py  bng_to_latlon.py  constants.py  latlon_to_bng.py
csv/: BNG.csv  LatLon.csv
transcripts/: bng_to_latlon.cs  bng_to_latlon.js  bng_to_latlon.m
