[project]
name = "bng-latlon"
version = "1.1.1"
description = "Converts british national grid (OSBG36) to lat lon (WGS84) and vice versa."
readme = "README.md"
authors = [
    { name = "Hannah Fry" },
    { name = "Francis Malina", email = "f@blocl.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: Public Domain",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = []

[project.urls]
Funding = "https://unilexicon.com/fm/pay.html"
Homepage = "https://github.com/fmalina/blocl-bnglatlon"

[tool.hatch.build.targets.sdist]
include = ["/bng_latlon"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.select = ["E", "F", "B"]
line-length = 100
format.quote-style = "single"

