[metadata]
name = bng_latlon
version = 1.0.3
url = https://github.com/fmalina/blocl-bnglatlon
author = Hannah Fry, F. Malina
author_email = hi@blocl.com
description = Converts british national grid (OSBG36) to lat lon (WGS84) and vice versa.
long_description = file: README.rst
license = MIT License
keywords = GPS, OSGB
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: GIS
project_urls =
    Homepage = https://blocl.uk
    Funding = https://unilexicon.com/fm/pay.html
    Source = https://github.com/fmalina/blocl-bnglatlon

[files]
packages = bng_latlon
