[metadata]
name = bng_latlon
module = bng_latlon
version = 1.1
url = https://github.com/fmalina/blocl-bnglatlon
author = Hannah Fry, F. Malina
author_email = hi@blocl.com
description = Converts british national grid (OSBG36) to lat lon (WGS84) and vice versa.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
keywords = GPS, OSGB
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: GIS
project_urls =
    Funding = https://unilexicon.com/fm/pay.html

[options]
packages = find:
